argocd/apps/wallos/manifests/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wallos
  name: wallos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wallos
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wallos
    spec:
      containers:
        - image: bellamy/wallos:latest
          imagePullPolicy: Always
          name: wallos
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /app/data
              name: data
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
      restartPolicy: Always
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: db
