argocd/apps/wallos/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wallos
spec:
  ingressClassName: istio
  rules:
    - host: wallos.yanello.net
      http:
        paths:
          - backend:
              service:
                name: wallos
                port:
                  number: 80
            path: /
            pathType: Prefix
